Use only Bean-based CORS configuration